---
source: compiler-core/src/type_/tests/errors.rs
expression: let _boringNumber = 72
---
----- SOURCE CODE
let _boringNumber = 72

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let _boringNumber = 72
  │     ^^^^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _boring_number
